--- a/KTU-SA-WEB/src/pages/event/components/eventInfo/EventInfo.module.css
+++ b/KTU-SA-WEB/src/pages/event/components/eventInfo/EventInfo.module.css
@@ -3,7 +3,7 @@
     gap: 20px;
     color: #134679;
     justify-content: space-around;
-    align-items: center;
+    align-items: start;
 }
 
 .Tickets{
@@ -36,9 +36,20 @@
     color: #0E2643;
 }
 
+.Oranisers {
+    display: flex;
+    gap: 10px
+}
+
+.OrganisersLogo {
+    max-height: 105px;
+}
+
 @media (max-width: 1200px) { 
     .Container {
        flex-direction: column;
+       align-items: center;
+       text-align: center;
     }
 }
 
@@ -46,8 +57,5 @@
     .Info {
         flex-direction: column;
         align-items: center;
-    }
-    .Details{
-        text-align: center;
     }
 }
