--- a/KTU-SA-WEB/src/pages/events/Events.module.css
+++ b/KTU-SA-WEB/src/pages/events/Events.module.css
@@ -1,20 +1,5 @@
-.Latest {
-    display: flex;
-    justify-content: space-around;
-}
-
-.GridContainer{
+.CardContainer {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    margin-bottom: 200px;
-    margin-top: 50px;
-}
-
-@media (max-width: 1500px) { 
-    .Latest {
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-    }
+    align-items: center;
 }
