--- a/KTU-SA-WEB/src/pages/events/components/EventCard.module.css
+++ b/KTU-SA-WEB/src/pages/events/components/EventCard.module.css
@@ -1,9 +1,7 @@
 .Card {
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
-    min-height: 100%;
     color: #24282D;
     border-radius: 8px;
     padding: 20px;
@@ -24,7 +22,6 @@
 .Text {
     display: flex;
     flex-direction: column;
-    height: 100%;
 }
 
 .Date {
@@ -35,4 +32,44 @@
 .Button {
     padding-top: 10px;
     margin-top: auto;
+}
+
+@media (max-width: 1500px) { 
+    .Card {
+        max-width: 400px;
+    }
+
+    .Image {
+        max-width: 400px;
+    }
+    .Text {
+        max-width: 400px;
+    }
+}
+
+@media (max-width: 1200px) { 
+    .Card {
+        max-width: 500px;
+    }
+
+    .Image {
+        max-width: 500px;
+    }
+    .Text {
+        max-width: 500px;
+    }
+}
+
+@media (max-width: 700px) { 
+    .Card {
+        max-width: 80vw;
+    }
+
+    .Image {
+        max-width: 80vw;
+        height: 100%;
+    }
+    .Text {
+        max-width: 80vw;
+    }
 }
