--- a/KTU-SA-WEB/src/pages/articles/components/ArticleListCard.module.css
+++ b/KTU-SA-WEB/src/pages/articles/components/ArticleListCard.module.css
@@ -46,3 +46,43 @@
     padding-top: 10px;
     margin-top: auto;
 }
+
+@media (max-width: 1500px) { 
+    .Card {
+        max-width: 400px;
+    }
+
+    .Image {
+        max-width: 400px;
+    }
+    .Text {
+        max-width: 400px;
+    }
+}
+
+@media (max-width: 1200px) { 
+    .Card {
+        max-width: 500px;
+    }
+
+    .Image {
+        max-width: 500px;
+    }
+    .Text {
+        max-width: 500px;
+    }
+}
+
+@media (max-width: 700px) { 
+    .Card {
+        max-width: 80vw;
+    }
+
+    .Image {
+        max-width: 80vw;
+        height: 100%;
+    }
+    .Text {
+        max-width: 80vw;
+    }
+}
