--- a/KTU-SA-WEB/src/pages/ktuFSA/KtuFSA.module.css
+++ b/KTU-SA-WEB/src/pages/ktuFSA/KtuFSA.module.css
@@ -1,6 +1,3 @@
-.ContactCards {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 64px;
-    justify-content: center;
+.Container {
+    z-index: 20;
 }
