--- a/KTU-SA-WEB/src/pages/ktuFSA/components/heroImage/HeroImage.module.css
+++ b/KTU-SA-WEB/src/pages/ktuFSA/components/heroImage/HeroImage.module.css
@@ -1,11 +1,9 @@
 .Container {
     position: absolute;
     display: flex;
-    margin: -8px;
     right: 0;
     left: 0;
-    border-bottom: 5px solid;
-    z-index: -10000;
+    z-index: 0;
 }
 
 .Button {
@@ -20,50 +18,65 @@
 }
 
 .Image {
-    max-width: 5vw;
+    max-width: 90px;
 }
 
 .TextContainer {
-    display: inline-flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     gap: 26px;
-    margin: auto;
+    width: 100vw;
 }
 
 .Text {
     font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 110%;
-    letter-spacing: 1.2px;
-    width: 20vw;
+    max-width: 20vw;
 }
 
 .HeroImage {
-    max-width: 30vw;
+    max-height: 40vh;
     border: 8px solid;
     border-radius: 10px;
     padding: 1px;
+    object-fit: cover;
 }
 
 .HeroImageContainer {
     position: relative;
     transform: rotate(1.252deg);
     bottom: -35px;
-    z-index: 1;
+    z-index: -3;
 }
 
 .Divder {
     position: absolute;
     background-color: #fff;
     z-index: 10;
-    width: 110%;
     right: 0;
     left: 0;
-    margin-top: 40vh;
-    margin-left: -10px;
-    margin-right: -10px;
     border-top: 5px solid;
-    height: 15vh;
+    height: 5vh;
+}
+
+
+@media (max-width: 900px) {
+    .TextContainer {
+        flex-direction: column;
+        gap: 0px;
+        justify-content: flex-start;
+    }
+
+    .Text {
+        max-width: 80vw;
+        text-align: center;
+    }
+
+    .HeroImage {
+        width: 80vw;
+    }
+
+    .ImageContainer{
+        margin-top: 35px;
+    }
 }
