--- a/KTU-SA-WEB/src/pages/event/components/eventHero/HeroImage.module.css
+++ b/KTU-SA-WEB/src/pages/event/components/eventHero/HeroImage.module.css
@@ -7,13 +7,14 @@
     gap: 20px;
     justify-content: center;
     align-items: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 60px;
+    padding-bottom: 20px;
 }
 
 .Image {
     width: 40vw;
     object-fit: cover;
+    margin-left: 150px;
 }
 
 .TextContainer{
@@ -28,6 +29,21 @@
     font-size: 36px;
 }
 
+.Tickets{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    font-size: 22px;
+    color: #0E2643;
+    transition: 0.03s;
+}
+
+.TicketUrl:hover, .Tickets:hover{
+    color: #4A9FE6;
+    transition: 0.03s;
+}
+
+
 @media (max-width: 1200px) { 
     .Container {
        flex-direction: column;
@@ -35,14 +51,19 @@
     }
     
     .Image {
-        width: 60vw;
+        width: 80vw;
         object-fit: cover;
+        margin-left: 0;
     }
 
     .TextContainer{
         width: 65vw;
         justify-content: flex-start;
         align-items: center;
+    }
+
+    .Title {
+        text-align: center;
     }
 }
 
