Fix: fixed some aligning problems and typos

--- a/KTU-SA-WEB/src/components/htmlBody/Body.module.css
+++ b/KTU-SA-WEB/src/components/htmlBody/Body.module.css
@@ -15,3 +15,13 @@
 .Link:hover {
     background-color: #E3EDFB !important;
 }
+
+.Paragraph {
+    text-align: justify;
+    font-size: 18px;
+}
+
+.Video{
+    display: flex;
+    justify-content: center;
+}
