--- a/KTU-SA-WEB/src/components/navigationBar/expandNavigation/ExpandNavigation.module.css
+++ b/KTU-SA-WEB/src/components/navigationBar/expandNavigation/ExpandNavigation.module.css
@@ -4,20 +4,19 @@
     border-bottom: #FFD324 1px solid;
     right: 0;
     left: 0;
-    padding: 20px;
     z-index: 10;
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 30px;
-    height: 20vh;
+    height: auto;
+    padding-bottom: 15px;
 }
 
 .Description {
     color: #CE8C00;
     font-size: 20px;
     font-style: normal;
-    font-weight: 500;
     line-height: 140%;
     width: 15vw;
     margin-right: 20vw;
