--- a/KTU-SA-WEB/src/components/htmlBody/Body.module.css
+++ b/KTU-SA-WEB/src/components/htmlBody/Body.module.css
@@ -17,11 +17,20 @@
 }
 
 .Paragraph {
-    text-align: justify;
     font-size: 18px;
 }
 
 .Video{
     display: flex;
     justify-content: center;
+}
+
+.Margin{
+    margin-bottom: 120px;
+}
+
+@media (max-width: 350px) {
+    .Margin{
+        margin-bottom: 150px;
+    }
 }
