--- a/KTU-SA-WEB/src/pages/home/Components/socialMedia/components/SocialLinks.module.css
+++ b/KTU-SA-WEB/src/pages/home/Components/socialMedia/components/SocialLinks.module.css
@@ -48,3 +48,16 @@
         padding: 10px;
     }
 }
+
+@media (max-width: 400px) {
+    .IgLogo {
+        width: 50px;
+    }
+
+    .Icon{
+        width: 60px;
+        height: 60px;
+        padding: 5px;
+        border-radius: 16px;
+    }
+}
