--- a/KTU-SA-WEB/src/components/footerBar/FooterBar.module.css
+++ b/KTU-SA-WEB/src/components/footerBar/FooterBar.module.css
@@ -96,3 +96,15 @@
         gap: 8px;
     }
 }
+
+@media (max-width: 320px) {
+    .NavigationSection {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(1, 1fr);
+        gap: 20px;
+    }
+    .Container {
+        line-height: auto;
+    }
+}
