--- a/KTU-SA-WEB/src/pages/home/Components/heroImage/HeroImage.module.css
+++ b/KTU-SA-WEB/src/pages/home/Components/heroImage/HeroImage.module.css
@@ -94,13 +94,14 @@
     }
 
     Text {
-        margin-left: 0px;
+        margin-left: 20px;
     }
 }
 
 @media (max-width: 450px) {
     .Title {
         font-size: 40px;
+        margin-bottom: 20px;
     }
 
     .Description {
