--- a/KTU-SA-WEB/src/pages/home/Components/socialMedia/SocialMedia.module.css
+++ b/KTU-SA-WEB/src/pages/home/Components/socialMedia/SocialMedia.module.css
@@ -213,3 +213,16 @@
         display: none;
     }
 }
+
+@media (max-width: 320px) {
+    .ImagesContainer .Image:nth-child(3){
+        display: none;
+    }
+}
+
+
+@media (max-width: 250px) {
+    .ImagesContainer .Image:nth-child(2){
+        display: none;
+    }
+}
