--- a/KTU-SA-WEB/src/pages/ktuFSA/components/heroImage/HeroImage.module.css
+++ b/KTU-SA-WEB/src/pages/ktuFSA/components/heroImage/HeroImage.module.css
@@ -49,7 +49,7 @@
     z-index: -3;
 }
 
-.Divder {
+.Divider {
     position: absolute;
     background-color: #fff;
     z-index: 10;
@@ -60,7 +60,7 @@
 }
 
 
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
     .TextContainer {
         flex-direction: column;
         gap: 0px;
@@ -73,7 +73,8 @@
     }
 
     .HeroImage {
-        width: 80vw;
+        width: 90vw;
+        border: 6px solid;
     }
 
     .ImageContainer{
