--- a/KTU-SA-WEB/styles/globals.css
+++ b/KTU-SA-WEB/styles/globals.css
@@ -25,6 +25,10 @@
     url('../public/fonts/PFDinTextPro-Medium.woff') format('woff');
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   font-family: 'PFDinTextPro-Regular', 'PFDinTextPro-Medium', 'PFDinTextPro-Bold';
   overflow-x: hidden;
